--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 
 theme: jekyll-agency
 
-url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+url    : "krisnabakti.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : Krisna Bakti Portfolio
-email      : your-email@example.com #this is also the email contact forms will go to
+email      : krisnabakti975@gmail.com #this is also the email contact forms will go to
 description: "Engineering Portfolio of Krisna Bakti" # a short description of your site
 author     : Krisna Bakti
 # logo:     #optional, defaults to site title
